Couldn't connect from the cli

--- a/incidentdb.ini
+++ b/incidentdb.ini
@@ -1,7 +1,8 @@
 [uwsgi]
-socket = /tmp/incidentdb.sock
+socket = /var/run/incidentdb.sock
 module = incidentdb:app
 master = true
 chmod-socket = 666
+chown-socket = incidentdb:nginx
 die-on-term = true
 vacuum = true
